--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/multi-nprogress@0.3.3/nprogress.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato" />
-    <title>CMS</title>
+    <title>MHW Builder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
